# 100_community_website

./: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml  ruff.toml  setup.cfg
.github/actions/setup_machine/: action.yaml
.github/workflows/: CD.yaml  CI.yaml  ci_cd.yaml
tests/: test_dummy.py
