[project]
name = "100_community_website"
version = "0.1.0"
description = "Website for Together to 100 Community"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "flask==3.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "mypy-extensions>=1.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
